--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -13,75 +13,372 @@
 </head>
 
 <body>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Accesorios</title>
-        <!---BOOSTRAP--->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-            integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-        <!---CSS--->
-        <link rel="stylesheet" href="../css/style.css">
-    </head>
-    
-    <body>
-        <header>
-            <h2>ENVÍO GRATIS A TODO EL PAÍS</h2>
+    <header>
+        <h2>ENVÍO GRATIS A TODO EL PAÍS</h2>
+        <div>
+            <a href="../index.html">
+                <h1>EL RINCÓN</h1>
+            </a>
+        </div>
+        <nav class="navbar navbar-expand-lg bg-white">
+            <div class="container-fluid">
+                <div>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav nav-fill w-100 mx-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="../pages/calzado.html">CALZADO</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="../pages/indumentaria.html">INDUMENTARIA</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="../pages/accesorios.html">ACCESORIOS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="../pages/rebajas.html">REBAJAS</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link active dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">MARCAS
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">NIKE</a></li>
+                                <li><a class="dropdown-item" href="#">ADIDAS</a></li>
+                                <li><a class="dropdown-item" href="#">PUMA</a></li>
+                                <li><a class="dropdown-item" href="#">CONVERSE</a></li>
+                                <li><a class="dropdown-item" href="#">LACOSTE</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#contacto">CONTACTOS</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Buscar</button>
+                    </form>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <main class="accesorios-pag">
+        <div class="accesorios-catalogo">
             <div>
-                <a href="../index.html">
-                    <h1>EL RINCÓN</h1>
+                <h3>GÉNERO</h3>
+                <ul>
+                    <li>
+                        <a href="">
+                            <p>Hombre</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Mujer</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Niños</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <h3>CATEGORÍAS</h3>
+                <ul>
+                    <li>
+                        <a href="">
+                            <p>Bolsos y mochilas</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Gorros</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Medias</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Pelotas</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Protección</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Para entrenar</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Muñequeras</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Billeteras</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Vinchas</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Infladores</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Palos de Hockey</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Bochas</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <h3>MARCAS</h3>
+                <ul>
+                    <li>
+                        <a href="">
+                            <p>Nike</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Adidas</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Puma</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Lacoste</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Speedo</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Umbro</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <h3>DISCIPLINA</h3>
+                <ul>
+                    <li>
+                        <a href="">
+                            <p>Running</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Training</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Moda</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Fútbol</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <section class="accesorios-contenedor">
+            <div>
+                <a href="">
+                    <img src="../img/acc-adidas-bolso-tr-duffle.png" alt="w adidas court plataform">
+                    <h3>BOLSO ADIDAS TR DUFFLE M</h3>
+                    <div>
+                        <strong class="precio">
+                            <span class="precio-moneda">UYU</span>
+                            <span class="precio-monto">2.490</span>
+                        </strong>
+                    </div>
                 </a>
             </div>
-            <nav class="navbar navbar-expand-lg bg-white">
-                <div class="container-fluid">
+            <div>
+                <a href="">
+                    <img src="../img/acc-adidas-medias-adi23-sock.png" alt="Lacoste ag-lt23 ultra">
+                    <h3>MEDIAS ADIDAS ADI 23 SOCK</h3>
                     <div>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
+                        <strong class="precio">
+                            <span class="precio-moneda">UYU</span>
+                            <span class="precio-monto">1.290</span>
+                        </strong>
                     </div>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav nav-fill w-100 mx-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link active" href="../pages/calzado.html">CALZADO</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" href="../pages/indumentaria.html">INDUMENTARIA</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" href="../pages/accesorios.html">ACCESORIOS</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" href="../pages/rebajas.html">REBAJAS</a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link active dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                    aria-expanded="false">MARCAS
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">NIKE</a></li>
-                                    <li><a class="dropdown-item" href="#">ADIDAS</a></li>
-                                    <li><a class="dropdown-item" href="#">PUMA</a></li>
-                                    <li><a class="dropdown-item" href="#">CONVERSE</a></li>
-                                    <li><a class="dropdown-item" href="#">LACOSTE</a></li>
-                                </ul>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" href="#contacto">CONTACTOS</a>
-                            </li>
-                        </ul>
-                        <form class="d-flex" role="search">
-                            <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-                            <button class="btn btn-outline-success" type="submit">Buscar</button>
-                        </form>
+                </a>
+            </div>
+            <div>
+                <a href="">
+                    <img src="../img/acc-adidas-pelota-basket-all-court.png" alt="flex experience 11">
+                    <h3>PELOTA DE BASKET ADIDAS ALL COURT 3.0</h3>
+                    <div>
+                        <strong class="precio">
+                            <span class="precio-moneda">UYU</span>
+                            <span class="precio-monto">2.490</span>
+                        </strong>
+                        <del class="precio-rebajado">
+                            <span class="precio-moneda">UYU</span>
+                            <span class="precio-monto">2.890</span>
+                        </del>
                     </div>
-                </div>
-            </nav>
-        </header>
-
-    <main>
-
+                </a>
+            </div>
+            <div>
+                <a href="">
+                    <img src="../img/acc-adidas-pelota-brasil-cup.png" alt="phantom gk pro fg">
+                    <h3>PELOTA DE FÚTBOL ADIDAS BRASIL CLUB</h3>
+                    <div>
+                        <strong class="precio">
+                            <span class="precio-moneda">UYU</span>
+                            <span class="precio-monto">1.590</span>
+                        </strong>
+                    </div>
+                </a>
+            </div>
+            <div>
+                <a href="">
+                    <img src="../img/acc-adidas-vincha-headban-3pp.png" alt="converse all star hi rojas">
+                    <h3>VINCHA ADIDAS HEADBAN 3PP</h3>
+                    <div>
+                        <strong class="precio">
+                            <span class="precio-moneda">UYU</span>
+                            <span class="precio-monto">990</span>
+                        </strong>
+                        <del class="precio-rebajado">
+                            <span class="precio-moneda">UYU</span>
+                            <span class="precio-monto">1.190</span>
+                        </del>
+                    </div>
+                </a>
+            </div>
+            <div>
+                <a href="">
+                    <img src="../img/acc-lacoste-gorro-contrast-border.png" alt="court vision low blancas">
+                    <h3>GORRO LACOSTE CONTRAST BORDER</h3>
+                    <div>
+                        <strong class="precio">
+                            <span class="precio-moneda">UYU</span>
+                            <span class="precio-monto">2.690</span>
+                        </strong>
+                    </div>
+                </a>
+            </div>
+            <div>
+                <a href="">
+                    <img src="../img/acc-nike-inflador-hyperspeed.png" alt="air max sc">
+                    <h3>INFLADOR NIKE HYPERSPEED</h3>
+                    <div>
+                        <strong class="precio">
+                            <span class="precio-moneda">UYU</span>
+                            <span class="precio-monto">790</span>
+                        </strong>
+                        <del class="precio-rebajado">
+                            <span class="precio-moneda">UYU</span>
+                            <span class="precio-monto">1.690</span>
+                        </del>
+                    </div>
+                </a>
+            </div>
+            <div>
+                <a href="">
+                    <img src="../img/acc-nike-medias-multiplier-2pack.png" alt="adidas hoops 3.0">
+                    <h3>MEDIAS NIKE MULTIPLIER 2 PACK</h3>
+                    <div>
+                        <strong class="precio">
+                            <span class="precio-moneda">UYU</span>
+                            <span class="precio-monto">1.190</span>
+                        </strong>
+                    </div>
+                </a>
+            </div>
+            <div>
+                <a href="">
+                    <img src="../img/acc-nike-mochila-elemental-premium.png" alt="puma smash 3.0">
+                    <h3>MOCHILA NIKE ELEMENTAL PREMIUM</h3>
+                    <div>
+                        <strong class="precio">
+                            <span class="precio-moneda">UYU</span>
+                            <span class="precio-monto">2.490</span>
+                        </strong>
+                        <del class="precio-rebajado">
+                            <span class="precio-moneda">UYU</span>
+                            <span class="precio-monto">2.990</span>
+                        </del>
+                    </div>
+                </a>
+            </div>
+            <div>
+                <a href="">
+                    <img src="../img/acc-nike-pelota-mercuria-fade.png" alt="court vision negras">
+                    <h3>PELOTA NIKE MERCURIAL FADE</h3>
+                    <div>
+                        <strong class="precio">
+                            <span class="precio-moneda">UYU</span>
+                            <span class="precio-monto">1.390</span>
+                        </strong>
+                    </div>
+                </a>
+            </div>
+            <div>
+                <a href="">
+                    <img src="../img/acc-puma-gorro-archive-logo.png" alt="converse low blancas">
+                    <h3>GORRO PUMA ARCHIVE LOGO</h3>
+                    <div>
+                        <strong class="precio">
+                            <span class="precio-moneda">UYU</span>
+                            <span class="precio-monto">890</span>
+                        </strong>
+                    </div>
+                </a>
+            </div>
+            <div>
+                <a href="">
+                    <img src="../img/acc-puma-morral-academy-portable.png" alt="vomero hombre gris">
+                    <h3>MORRAL PUMA ACADEMY PORTABLE</h3>
+                    <div>
+                        <strong class="precio">
+                            <span class="precio-moneda">UYU</span>
+                            <span class="precio-monto">890</span>
+                        </strong>
+                    </div>
+                </a>
+            </div>
+            </div>
+        </section>
     </main>
 
     <footer id="contacto">
@@ -93,17 +390,17 @@
             </div>
             <div class="suscripcion-mail">
                 <form action="">
-                        <ul>
-                            <li>
-                                <input type="email" name="email" required="" placeholder="Ingresa tu e-mail">
-                            </li>
-                            <li>
-                                <button type="submit" class="btn btn-primary"
-                                    style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
-                                    SUSCRIBIRME
-                                </button>
-                            </li>
-                        </ul>
+                    <ul>
+                        <li>
+                            <input type="email" name="email" required="" placeholder="Ingresa tu e-mail">
+                        </li>
+                        <li>
+                            <button type="submit" class="btn btn-primary"
+                                style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
+                                SUSCRIBIRME
+                            </button>
+                        </li>
+                    </ul>
                 </form>
             </div>
         </div>
