--- a/pages/indumentaria.html
+++ b/pages/indumentaria.html
@@ -1,79 +1,349 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>El Rincón</title>
-        <!---BOOSTRAP--->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-            integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-        <!---CSS--->
-        <link rel="stylesheet" href="../css/style.css">
-    </head>
-    
-    <body>
-        <header>
-            <h2>ENVÍO GRATIS A TODO EL PAÍS</h2>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>El Rincón</title>
+    <!---BOOSTRAP--->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <!---CSS--->
+    <link rel="stylesheet" href="../css/style.css">
+</head>
+
+<body>
+    <header>
+        <h2>ENVÍO GRATIS A TODO EL PAÍS</h2>
+        <div>
+            <a href="../index.html">
+                <h1>EL RINCÓN</h1>
+            </a>
+        </div>
+        <nav class="navbar navbar-expand-lg bg-white">
+            <div class="container-fluid">
+                <div>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav nav-fill w-100 mx-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="../pages/calzado.html">CALZADO</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="../pages/indumentaria.html">INDUMENTARIA</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="../pages/accesorios.html">ACCESORIOS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="../pages/rebajas.html">REBAJAS</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link active dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">MARCAS
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">NIKE</a></li>
+                                <li><a class="dropdown-item" href="#">ADIDAS</a></li>
+                                <li><a class="dropdown-item" href="#">PUMA</a></li>
+                                <li><a class="dropdown-item" href="#">CONVERSE</a></li>
+                                <li><a class="dropdown-item" href="#">LACOSTE</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#contacto">CONTACTOS</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Buscar</button>
+                    </form>
+                </div>
+            </div>  
+        </nav>
+    </header>
+
+    <main class="indumentaria-pag">
+        <div class="indumentaria-catalogo">
             <div>
-                <a href="../index.html">
-                    <h1>EL RINCÓN</h1>
+                <h3>GÉNERO</h3>
+                <ul>
+                    <li>
+                        <a href="">
+                            <p>Hombre</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Mujer</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Niños</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <h3>CATEGORÍAS</h3>
+                <ul>    
+                    <li>
+                        <a href="">
+                            <p>Buzos</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Calzas</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Camperas</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Pantalones</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Remeras y musculosas</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Short</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <h3>MARCAS</h3>
+                <ul>    
+                    <li>
+                        <a href="">
+                            <p>Nike</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Adidas</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Puma</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Lacoste</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Speedo</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Umbro</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <h3>DISCIPLINA</h3>
+                <ul>
+                    <li>
+                        <a href="">
+                            <p>Running</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Training</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Moda</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <p>Fútbol</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <section class="indumentaria-contenedor">
+            <div>
+                <a href="">
+                    <img src="../img/indu-adidas-canguro-essentialas-brandlove.png" alt="w adidas court plataform">
+                    <h3>BUZO ADIDAS ESSENTIALS BRAND LOVE</h3>
+                    <div>
+                        <strong class="precio">
+                            <span class="precio-moneda">UYU</span>
+                            <span class="precio-monto">3.990</span>
+                        </strong>
+                    </div>
                 </a>
             </div>
-            <nav class="navbar navbar-expand-lg bg-white">
-                <div class="container-fluid">
+            <div>
+                <a href="">
+                    <img src="../img/indu-nacional-canguro-retrohealthy.png" alt="Lacoste ag-lt23 ultra">
+                    <h3>BUZO NACIONAL RETRO HEALTHY FABRIC</h3>
                     <div>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
+                        <strong class="precio">
+                            <span class="precio-moneda">UYU</span>
+                            <span class="precio-monto">3.790</span>
+                        </strong>
                     </div>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav nav-fill w-100 mx-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link active" href="../pages/calzado.html">CALZADO</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" href="../pages/indumentaria.html">INDUMENTARIA</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" href="../pages/accesorios.html">ACCESORIOS</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" href="../pages/rebajas.html">REBAJAS</a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link active dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                    aria-expanded="false">MARCAS
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">NIKE</a></li>
-                                    <li><a class="dropdown-item" href="#">ADIDAS</a></li>
-                                    <li><a class="dropdown-item" href="#">PUMA</a></li>
-                                    <li><a class="dropdown-item" href="#">CONVERSE</a></li>
-                                    <li><a class="dropdown-item" href="#">LACOSTE</a></li>
-                                </ul>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" href="#contacto">CONTACTOS</a>
-                            </li>
-                        </ul>
-                        <form class="d-flex" role="search">
-                            <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-                            <button class="btn btn-outline-success" type="submit">Buscar</button>
-                        </form>
+                </a>
+            </div>
+            <div>
+                <a href="">
+                    <img src="../img/indu-nike-campera-hoodiefz.png" alt="flex experience 11">
+                    <h3>CAMPERA NIKE CLUB HOODIE FZ</h3>
+                    <div>
+                        <strong class="precio">
+                            <span class="precio-moneda">UYU</span>
+                            <span class="precio-monto">3.990</span>
+                        </strong>
                     </div>
-                </div>
-            </nav>
-        </header> 
-    <main>
-        <section>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi, ipsam voluptatum? Inventore cum dicta quidem explicabo praesentium quod repellendus accusamus ratione eum consequuntur mollitia odit nihil, ex aperiam minus ut!
-
-            </p>
+                </a>
+            </div>
+            <div>
+                <a href="">
+                    <img src="../img/indu-nike-futbol-remera-camisetabarcelona-secundaria.png" alt="phantom gk pro fg">
+                    <h3>CAMISETA DE FÚTBOL NIKE FC BARCELONA STADIUM 4TH</h3>
+                    <div>
+                        <strong class="precio">
+                            <span class="precio-moneda">UYU</span>
+                            <span class="precio-monto">3.490</span>
+                        </strong>
+                    </div>
+                </a>
+            </div>
+            <div>
+                <a href="">
+                    <img src="../img/indu-nike-remera-drif-fit-uvmiler.png" alt="converse all star hi rojas">
+                    <h3>REMERA NIKE DRI-FIT MILER</h3>
+                    <div>
+                        <strong class="precio">
+                            <span class="precio-moneda">UYU</span>
+                            <span class="precio-monto">1.890</span>
+                        </strong>
+                        <del class="precio-rebajado">
+                            <span class="precio-moneda">UYU</span>
+                            <span class="precio-monto">2.490</span>
+                        </del>
+                    </div>
+                </a>
+            </div>
+            <div>
+                <a href="">
+                    <img src="../img/indu-puma-calza-favoriteforever-highwasit.png" alt="court vision low blancas">
+                    <h3>CALZA PUMA FAVORITE FOREVER HIGH WAIST</h3>
+                    <div>
+                        <strong class="precio">
+                            <span class="precio-moneda">UYU</span>
+                            <span class="precio-monto">2.690</span>
+                        </strong>
+                    </div>
+                </a>
+            </div>
+            <div>
+                <a href="">
+                    <img src="../img/indu-puma-canguro-powertape-tr.png" alt="air max sc">
+                    <h3>BUZO PUMA POWER TAPE TR</h3>
+                    <div>
+                        <strong class="precio">
+                            <span class="precio-moneda">UYU</span>
+                            <span class="precio-monto">3.490</span>
+                        </strong>
+                    </div>
+                </a>
+            </div>
+            <div>
+                <a href="">
+                    <img src="../img/indu-puma-remera-essential-small-logo.png" alt="adidas hoops 3.0">
+                    <h3>REMERA PUMA ESSENTIALS SMALL LOGO</h3>
+                    <div>
+                        <strong class="precio">
+                            <span class="precio-moneda">UYU</span>
+                            <span class="precio-monto">1.290</span>
+                        </strong>
+                    </div>
+                </a>
+            </div>
+            <div>
+                <a href="">
+                    <img src="../img/indu-speedo-trajedebaño-logo-medalist.png" alt="puma smash 3.0">
+                    <h3>TRAJE DE BAÑO SPEEDO MEDLEY LOGO MEDALIST</h3>
+                    <div>
+                        <strong class="precio">
+                            <span class="precio-moneda">UYU</span>
+                            <span class="precio-monto">3.190</span>
+                        </strong>
+                    </div>
+                </a>
+            </div>
+            <div>
+                <a href="">
+                    <img src="../img/indu-umbro-camperon-new-u-classic.png" alt="court vision negras">
+                    <h3>PARKA UMBRO NEW U-CLASSIC</h3>
+                    <div>
+                        <strong class="precio">
+                            <span class="precio-moneda">UYU</span>
+                            <span class="precio-monto">3.490</span>
+                        </strong>
+                    </div>
+                </a>
+            </div>
+            <div>
+                <a href="">
+                    <img src="../img/indu-umbro-canguro-pocketfleece.png" alt="converse low blancas">
+                    <h3>CANGURO UMBRO POCKET FLEECE FABRIC</h3>
+                    <div>
+                        <strong class="precio">
+                            <span class="precio-moneda">UYU</span>
+                            <span class="precio-monto">1.990</span>
+                        </strong>
+                        <del class="precio-rebajado">
+                            <span class="precio-moneda">UYU</span>
+                            <span class="precio-monto">2.790</span>
+                        </del>
+                    </div>
+                </a>
+            </div>
+            <div>
+                <a href="">
+                    <img src="../img/indu-uruguay-remera-puma-training.png"
+                        alt="vomero hombre gris">
+                    <h3>REMERA PUMA URUGUAY TRAINING</h3>
+                    <div>
+                        <strong class="precio">
+                            <span class="precio-moneda">UYU</span>
+                            <span class="precio-monto">2.590</span>
+                        </strong>
+                    </div>
+                </a>
+            </div>
+            </div>
         </section>
-    </main>   
-        
+    </main>
+
     <footer id="contacto">
         <div class="suscripcion">
             <div class="suscripcion-titulo">
@@ -83,17 +353,17 @@
             </div>
             <div class="suscripcion-mail">
                 <form action="">
-                        <ul>
-                            <li>
-                                <input type="email" name="email" required="" placeholder="Ingresa tu e-mail">
-                            </li>
-                            <li>
-                                <button type="submit" class="btn btn-primary"
-                                    style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
-                                    SUSCRIBIRME
-                                </button>
-                            </li>
-                        </ul>
+                    <ul>
+                        <li>
+                            <input type="email" name="email" required="" placeholder="Ingresa tu e-mail">
+                        </li>
+                        <li>
+                            <button type="submit" class="btn btn-primary"
+                                style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
+                                SUSCRIBIRME
+                            </button>
+                        </li>
+                    </ul>
                 </form>
             </div>
         </div>
@@ -190,6 +460,7 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
-    </script>
+        </script>
 </body>
+
 </html>
